<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>patel</groupId>
	<artifactId>krishna</artifactId>
	<version>8.2</version>

	<properties>
		<cucumber.version>5.6.0</cucumber.version>
		<selenium.version>3.141.59</selenium.version>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven.failsafe-plugin.version>3.0.0-M3</maven.failsafe-plugin.version>
		<maven.surefire-plugin.version>3.0.0-M3</maven.surefire-plugin.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>${cucumber.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>${cucumber.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>${selenium.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.github.io-siv</groupId>
			<artifactId>support</artifactId>
			<version>0.2.3</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven.surefire-plugin.version}</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>${maven.failsafe-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>single</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.8.0</version>
						<configuration>
							<proc>none</proc>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<version>${maven.failsafe-plugin.version}</version>
						<executions>
							<execution>
								<configuration>
									<includes>
										<include>package/run/SingleRunner.java</include>
									</includes>
									<systemPropertyVariables>
										<studio.gizmo.browser>Chrome</studio.gizmo.browser>
										<studio.profileId>single</studio.profileId>
									</systemPropertyVariables>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>domestic</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<version>${maven.failsafe-plugin.version}</version>
						<executions>
							<execution>
								<configuration>
									<includes>
										<include>package/run/Domestic*Runner.java</include>
									</includes>
									<parallel>classes</parallel>
									<useUnlimitedThreads>true</useUnlimitedThreads>
									<forkCount>4</forkCount>
									<reuseForks>true</reuseForks>
									<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
									<systemPropertyVariables>
										<studio.profileId>domestic</studio.profileId>
									</systemPropertyVariables>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>remote</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<version>${maven.failsafe-plugin.version}</version>
						<executions>
							<execution>
								<configuration>
									<includes>
										<include>package/run/Remote*Runner.java</include>
									</includes>
									<parallel>classes</parallel>
									<useUnlimitedThreads>true</useUnlimitedThreads>
									<forkCount>4</forkCount>
									<reuseForks>true</reuseForks>
									<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
									<systemPropertyVariables>
										<studio.profileId>remote</studio.profileId>
										<studio.local>true</studio.local>
										<studio.local.force>true</studio.local.force>
										<studio.local.debug>true</studio.local.debug>
									</systemPropertyVariables>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
